--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "htmlhint": "^1.1.4",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "3.0.3"
   }
 }
